# voxelmap

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  POETRY-USAGE.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  terraform.py  terraformed  voxelmap-depth-fusion
docs/: requirements.in
docs/img/imagemesh/: space_comp.py
docs/source/: api.rst  conf.py  imagemesh.rst  index.rst  usage.rst
docs/source/examples/: galactic.rst  island.rst  meshrec.rst  skull.rst
extra/: dog.py  galactic.py  island.json  island.py  land.py  skull.txt  sphere.gox  sphere.txt
model_files/: argisle.gox  argisle.txt  brain.txt  checkers.txt  dog.gox  dog.py  dog.txt  galactic.py  island.gox  island.py  land.py  randomwalk.json  sculpted_head.gox  skull.py  tree.py
tests/: block_a  draft.py  raw.py  test_module.py
voxelmap/: __init__.py  annex.py  data.py  goxel.py  image.py  jotunn.py  legacy.py  main.py  makegraphics.py  objloader.py  objviewer.py
