[tool.poetry]
name = "voxelmap"
version = "2.1.7"
description = "A Python library for making voxel and 3D models from NumPy arrays."
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
pytest = "^7.2.0"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
opencv-python = "^4.7.0.68"
pygame = "^2.1.2"
scipy = "^1.10.0"
pyopengl = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
