[tool.poetry]
name = "voxelmap"
version = "4.2.0"
description = "A Python library for making voxel and 3D models from NumPy arrays."
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
opencv-python = "^4.7.0.68"
scipy = "^1.10.0"
scikit-image = "^0.19.3"
pyvista = "^0.38.2"
colorcet = "^3.0.1"
pytest = "^7.3.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
